Adding users url
